Revert "Pardinus v1.1.1"